indimail-mta (@version@-@release@) unstable; urgency=low

  * hier.c: use 0755 for bin and sbin
  * indimail-mta: replaced setup with installer which uses text files for installation
  * indimail-mta.spec: fixed AutoReq
  * indimail-mta.spec: updated compiler flags for ucspi-tcp
  * ucspi-tcp: replaced setup with installer which uses text files for installation
  * ucspi-tcp: updated compiler switches
  * instcheck.c: skip chmod if mode is -1
  * hier.c: leave owner, group, permissions alone as they are owned by indimail-mta package
  * installer.c: sync permissions with indimail-mta.spec file
  * fixed linkat(), unlinkat(), renameat() calls
  * leapsecs.txt: added date 2016-12-31
  * moved to libqmail:  mess822.h, mess822_addr.c, mess822_date.c, mess822_fold.c, mess822_line.c, mess822_ok.c, mess822_quote.c, mess822_token.c, mess822_when.c, mess822.3 mess822_addr.3, mess822_date.3, mess822_fold.3, mess822_quote.3, mess822_token.3, mess822_when.3
  * moved to libqmail: commands.c, commands.h, rewritehost.c, rewritehost.h, rewritehost.3
  * smtpd.c, ofmpid.c: variable ctl_maxcmdlen moved to libqmail
  * moved to libqmail: sconfig.c, sconfig.h
  * qmail-send.c, qmail-todo.c: use control files conf-fsync, conf-syncdir to turn on fsync, bsd style syncdir semantics
  * qmail-send.c, qmail-todo.c: set / unset USE_FSYNC, USE_SYNCDIR env variables
  * qmail-queue.c, qmail-local.c: changed default value of use_fsync, use_syncdir to -1
  * indimail-mta, ucspi-tcp: fixes for FreeBSD